admin portal . send sms and assign doctor service provider. can see bookings dev and live dist uploaded

--- a/portal/admin/src/app/components/tables/appointments/appointments.component.html
+++ b/portal/admin/src/app/components/tables/appointments/appointments.component.html
@@ -41,17 +41,22 @@
               Actions
             </mat-header-cell>
             <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
-              <div><button mat-icon-button style="color: rgb(4, 142, 206)" title="Download Invoice" (click)="onOrderInfo(element)">
-                <mat-icon>info</mat-icon>
-              </button>
-                <button mat-icon-button style="color:rgb(16, 107, 4)" (click)="onDateTime(element)" matTooltip="Update Date Time ">
-                  <mat-icon>update</mat-icon>
+              <div><button mat-icon-button style="color: rgb(4, 142, 206)" title="Download Invoice"
+                  (click)="onOrderInfo(element)">
+                  <mat-icon>info</mat-icon>
                 </button>
-                <button mat-icon-button style="color:rgb(216, 108, 35)" (click)="onSession(element)" matTooltip="Update session">
-                    <mat-icon>medical_services</mat-icon>
-                  </button>
+                <!-- <button mat-icon-button style="color:rgb(16, 107, 4)" (click)="onDateTime(element)" matTooltip="Update Date Time ">
+                  <mat-icon>update</mat-icon>
+                </button> -->
+                <button mat-icon-button style="color:rgb(216, 108, 35)" (click)="onSession(element)"
+                  matTooltip="Update session">
+                  <mat-icon>medical_services</mat-icon>
+                </button>
                 <button mat-icon-button color="primary" (click)="onEdit(element)" matTooltip="Edit">
                   <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" (click)="onAsigndoctor(element)" matTooltip="Assign Doctor">
+                  <mat-icon>assignment</mat-icon>
                 </button>
                 <button mat-icon-button color="warn" (click)="onDelete(element._id)" matTooltip="Delete">
                   <mat-icon>delete</mat-icon>
@@ -67,19 +72,20 @@
             </mat-cell>
           </ng-container>
           <ng-container matColumnDef="session">
-            <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Visit Session / Session Remaining </mat-header-cell>
+            <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Visit Session / Session Remaining
+            </mat-header-cell>
             <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
               <span class="mobile-label">Visit Session / Session Remaining : </span>
               {{element.session}} / {{element.session_remaining}}
             </mat-cell>
           </ng-container>
-          <ng-container matColumnDef="bookingDateTime">
+          <!-- <ng-container matColumnDef="bookingDateTime">
             <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Booking Date/Time </mat-header-cell>
             <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
               <span class="mobile-label">Booking Date/Time : </span>
               {{element.bookingDateTime_text}}
             </mat-cell>
-          </ng-container>
+          </ng-container> -->
           <ng-container matColumnDef="coustomerName">
             <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Customer Name </mat-header-cell>
             <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
@@ -95,10 +101,11 @@
             </mat-cell>
           </ng-container>
           <ng-container matColumnDef="serviceName">
-            <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Service Name </mat-header-cell>
+            <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Service Name/ Provider Name
+            </mat-header-cell>
             <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
-              <span class="mobile-label">Service Name : </span>
-              {{element.serviceNameEnglish_text}}
+              <span class="mobile-label">Service Name / Provider Name : </span>
+              {{element.serviceNameEnglish_text}} / {{element.serviceProvider_text}}
             </mat-cell>
           </ng-container>
           <ng-container matColumnDef="stage">
@@ -108,15 +115,15 @@
               {{element.stage_text}}
             </mat-cell>
           </ng-container>
-          
-          <ng-container matColumnDef="serviceCharge">
+
+          <!-- <ng-container matColumnDef="serviceCharge">
             <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Service Total Charge </mat-header-cell>
             <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
               <span class="mobile-label">Service Total Charge : </span>
-             
+
               {{element.serviceTotal}}
             </mat-cell>
-          </ng-container>
+          </ng-container> -->
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
