--- a/portal/admin/src/app/element-core/sidemenu/sidemenu.component.html
+++ b/portal/admin/src/app/element-core/sidemenu/sidemenu.component.html
@@ -2,11 +2,11 @@
   <div fxLayout="column" >
       <div *ngIf="!iconOnly" fxLayout="column" fxLayoutAlign="start center" [style.margin]="'10px 0px'" >
         <!-- <img width="100" [src]="toolbarHelpers.currentUser.sideMenuPhotoURL"> -->
-        <img width="100" src='../../../assets/images/logo.png'>
+        <!-- <img width="100" src='../../../assets/images/logo.png'> -->
       </div>
       <div *ngIf="iconOnly" style="height: 100px;" fxLayout="column" fxLayoutAlign="space-around center"  >
         <!-- <img width="50" [src]="toolbarHelpers.currentUser.sideMenuPhotoURL"> -->
-        <img width="50" src='../../../assets/images/logo.png'>
+        <!-- <img width="50" src='../../../assets/images/logo.png'> -->
       </div>
       <app-sidemenu-item *ngFor="let menu of menus" [menu]="menu" [iconOnly]="iconOnly"> </app-sidemenu-item>
   </div>
