--- a/portal/admin/src/app/authorization/authorization.component.html
+++ b/portal/admin/src/app/authorization/authorization.component.html
@@ -3,8 +3,8 @@
     <mat-toolbar color="primary" class="mat-elevation-z4">
       <img style="margin-right: 10px;" src="./../../assets/images/logo.png" width="36px">
       <h1 style="font-size: 26px; font-family: Roboto;color:white;margin-top: 8px;">
-        MED
-        <span style="font-size: 20px;">Service</span>
+        Ohzas
+        <span style="font-size: 20px;">Admin</span>
       </h1>
     </mat-toolbar>
     <app-sidemenu [menus]="menuElements"></app-sidemenu>
